[package]
name = "cache-compute"
version = "0.1.0"
edition = "2021"
description = "This crate implements request/async computation coalescing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.27", features = ["macros", "test-util"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
