[package]
name = "cache-compute"
version = "0.2.0"
edition = "2021"
description = "This crate implements request/async computation coalescing."
license = "MIT"
repository = "https://github.com/gpluscb/cache-compute/"
keywords = ["cache", "caching", "coalescing", "coalesce"]
categories = ["asynchronous", "caching", "web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.27", features = ["macros", "test-util"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
